<resources>
    <!-- String related to hamburger menu -->
    <string name="app_name">MoveChair</string>
    <string name="facebook_app_id">622161118240070</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="options">Options</string>
    <string name="googlefit">Google Fit</string>
    <string name="profile">Profile</string>
    <string name="achievements">Achievements</string>
    <string name="activities">Activities</string>
    <string name="activity_log">Activity Log</string>
    <string name="get_started">Get Started</string>
    <string name="home">Home</string>
    <string name="highscore">Highscore</string>
    <string name="my_plan">My Plan</string>
    <string name="smart">SMART Goal</string>

    <string name="title_activity_login">Sign in</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_preview_app">Preview App</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to register -->
    <string name="register_title">New User</string>

    <!-- Strings related to home -->
    <string name="strides">Strides</string>
    <string name="upcoming_workout">Upcoming Workout</string>
    <string name="my_plan_btn">See My Plan</string>
    <string name="points_title">Total Points</string>
    <string name="achievements_title">Achievements</string>

    <!-- Strings related to activity log -->

    <!-- String related to search view -->
    <string name="search_hint">Muscle, Equipment, Exercise...</string>
    <string name="action_search">Title</string>

    <!-- Strings related to get started-->
    <string name="get_started_title">Review Your Info</string>
    <string name="radio_button_male">Male</string>
    <string name="radio_button_female">Female</string>
    <string name="input_age">Birthday</string>
    <string name="input_height">Height</string>
    <string name="input_weight">Weight</string>
    <string name="action_skip">Skip</string>
    <string name="action_get_started">Get Started</string>
    <string name="age">Age</string>


    <!-- Strings related to activities -->
    <string name="activity_title">Title: </string>
    <string name="activity_duration">Duration: </string>
    <string name="activity_muscle_group">Muscle Group(s): </string>
    <string name="activity_points">Points: </string>
    <string name="activity_description">Description: </string>
    <string name="action_filter">Filters</string>

    <!-- Strings related to exercises -->
    <string name="exercise_title">Title: </string>
    <string name="exercise_duration">Duration: </string>
    <string name="exercise_description">Description: </string>
    <string name="exercise_points">Points: </string>
    <string name="exercise_equipment">Equipment: </string>
    <string name="exercise_difficulty">Difficulty: </string>
    <string name="exercise_category">Category: </string>
    <string name="exercise_muscle_group">Muscle group(s): </string>
    <string name="exercise_muscle">Muscle(s): </string>
    <string name="action_start_exercise">Start Exercise</string>

    <!-- Strings related to activity_log_item -->
    <string name="activity_log_item_title">Title: </string>
    <string name="activity_log_item_type">Activity: Type</string>
    <string name="activity_log_item_date">Date: </string>

    <!-- Strings related to fragment_daily_log -->
    <string name="activity_log_header">Number of activities completed</string>
    <string name="activity_log_total">Total: #</string>
    <string name="activity_log_week">This week: #</string>
    <string name="activity_log_day">Today: #</string>

    <!-- Strings related to workouts -->
    <string name="workout_title">Title: </string>
    <string name="workout_description">Description: </string>
    <string name="workout_points">Points: </string>
    <string name="workout_equipment">Equipment: </string>
    <string name="workout_difficulty">Difficulty: </string>
    <string name="workout_category">Category: </string>
    <string name="workout_muscle_group">Muscle group(s): </string>
    <string name="workout_duration">Duration: </string>
    <string name="action_start_workout">Start Workout</string>

    <!-- String related to workout plans -->
    <string name="workout_plan_title">Title: </string>
    <string name="workout_plan_description">Description: </string>
    <string name="workout_plan_points">Points: </string>
    <string name="workout_plan_equipment">Equipment: </string>
    <string name="workout_plan_difficulty">Difficulty: </string>
    <string name="workout_plan_category">Category: </string>
    <string name="workout_plan_muscle_group">Muscle group(s): </string>
    <string name="workout_plan_duration">Duration: </string>
    <string name="action_add_workout_plan">Add to MyPlan</string>

    <!-- String related to activities menu -->
    <string name="action_exercises">Exercises</string>
    <string name="action_workouts">Workouts</string>
    <string name="action_workout_plans">Workout Plans</string>

    <!-- Strings related to spinner_activity -->
    <!-- Equipment, Muscle, MuscleGroups, Category -->
    <string name="spinner_title">SpinnerModel</string>
    <!-- Equipment: Barbell, Dumbell, MuscleGroups: Back, Chest, Arm... -->
    <string name="spinner_checkbox">ModelItem</string>
    <string name="action_set_filters">Set Filters</string>

    <!-- Strings related to profile -->

    <!-- Strings related to highscore -->

    <!-- Strings related to achievements -->

    <!-- Strings related to options -->
    <string name="action_sign_out">Sign out</string>

    <!-- Dummy strings -->
    <string name="lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>

    <string name="title_activity_goactiviy">ActivityGOActiviy</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_gotest">ActivityGOTestActivity</string>

    <!-- Strings related to Exercise Parameter Visulization Engine-->
    <string name="analyze_title">Analyze</string>
    <string name="analyze_map_button">Travel Map</string>
    <string name="analyze_convert_button">Convert data</string>
    <string name="analyze_unit">Unit</string>
    <string name="analyze_value">Value</string>
    <string name="pve_unit">Unit</string>
    <string name="pve_value">Value</string>
    <string name="pve_description">Description</string>

    <!-- Strings related to Travel Map-->
    <string name="map_current">Currently traveled:</string>
    <string name="map_unit">Unit</string>
    <string name="map_value">Value</string>
    <string name="map_next_threshold">Next Check Point: </string>
    <string name="map_threshold">Threshold</string>
    <string name="map_description">Description</string>

    <!-- Strings related to SMART goal-->
    <string name="smart_specific">I want to focus on</string>
    <string name="smart_measurable">Enter the value you want to reach according to your goal</string>
    <string name="smart_value">10</string>
    <string name="smart_start_date">20-02-2020</string>
    <string name="smart_end_date">02-02-2222</string>
    <string name="smart_sessions">Weekly Sessions:</string>
    <string name="smart_number_of_sessions">4</string>
    <string name="smart_confirm_button">Confirm</string>

</resources>
