<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_plan"
            android:title="@string/my_plan" />
        <item
            android:id="@+id/activity_log"
            android:title="@string/activity_log" />
        <item
            android:id="@+id/activities"
            android:title="@string/activities" />
        <item
            android:id="@+id/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/achievements"
            android:title="@string/achievements" />
        <item
            android:id="@+id/highscore"
            android:title="@string/highscore" />
        <item
            android:id="@+id/options"
            android:title="@string/options" />
    </group>

</menu>
